--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h2{
   background: rgba(	230, 57, 70,0.9);
   border-radius: 5px;
   height: 2.5rem;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   outline: none;
   border:none;
   box-shadow: 0 0.3rem rgba(121,121,121,0.65);
@@ -58,3 +58,4 @@ h2{
   transform: translate(0,0.2rem);
   box-shadow: 0 0.1rem rgba(121,121,121,0.65);
 }
+/*Nav bar*/
