--- a/style.css
+++ b/style.css
@@ -5,22 +5,40 @@ html{
 } 
 body{
   margin:0;
+
 }
 h1{
   /* font-size: 60px; */
   font-size: 3rem;
-  margin:0 10px
+  margin:0 10px;
 }
 h2{
    font-size: 2.2rem;
    margin:0 10px;
    margin-top: 20px;
 }
+section{
+  font-family: Raleway, sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f1faee;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23a8dadc' fill-opacity='0.82'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+section h1{
+  font-family:Raleway;
+  color: #1D3557;
+  font-size: 4rem;
+  font-weight: bolder;
+  margin:0 10px;
+}
 
 /*presentation*/
 .presentation-container{
   height: 100vh;
-  width: 100vw;
+
   background: url(./img/background.svg);
   background-size:cover;
   background-repeat: no-repeat;
@@ -35,7 +53,7 @@ h2{
 
 }
 .presentation-container span{
-  color: rgb(230, 57, 70);;
+  color: rgb(230, 57, 70);
   font-size: 1.1em;
   font-weight: bolder;
 }
@@ -58,4 +76,78 @@ h2{
   transform: translate(0,0.2rem);
   box-shadow: 0 0.1rem rgba(121,121,121,0.65);
 }
-/*Nav bar*/
+/*Nav bar customizing*/
+.navbar-custom{
+  background: rgb(230, 57, 70);
+}
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text{
+  color:rgb(	241, 250, 238);
+}
+.navbar-custom .navbar-nav .nav-link{
+  color:rgb(	241, 250, 238);
+}
+.navbar-custom .nav-item.active .nav-link,
+.navbar-custom .nav-item:hover .nav-link {
+    color: #1D3557;
+}
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(241, 250, 238' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.custom-toggler.navbar-toggler {
+  border-color: rgb(	241, 250, 238);
+} 
+.nav-link{
+  font-size: 1.2rem;
+  font-family: Raleway, sans-serif;
+  margin: 0px 15px;
+}
+
+/*about container*/
+.about-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 60%;
+  padding: 10px 20px;
+  margin: 25px;
+  border-radius: 10px;
+  font-family: Raleway, sans-serif;
+  background:rgba(		168,	218,	220,0.6);
+}
+.about-container img{
+  width: 200px;
+  height: auto;
+  border-radius: 10px;
+ 
+}
+.about-me-info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1.4em;
+  font-weight: 400;
+}
+.about-me-info h1{
+  font-size: 2em;
+  color:#457B9D;
+}
+
+/*media query*/
+@media screen and (max-width:750px) {
+  .nav-link{
+    text-align: center;
+    font-size: 2.8rem;
+    margin: 20px 0px;
+  }
+  .about-container{
+    flex-wrap: wrap;
+  }
+  .about-container{
+    width: 90%;
+  }
+
+}
