--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ section h1{
   margin: 25px;
   border-radius: 10px;
   font-family: Raleway, sans-serif;
- 
+  box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
   background-color: #A8DADC;
 
 }
@@ -123,6 +123,7 @@ section h1{
   width: 200px;
   height: auto;
   border-radius: 10px;
+  
  
 }
 .about-me-info{
@@ -152,6 +153,7 @@ section h1{
   margin: 10px 20px;
   border-radius: 7px;
   text-align: center;
+  box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
 }
 .image-container img{
   width: 300px;
