--- a/style.css
+++ b/style.css
@@ -1,47 +1,46 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
-html{
+html {
   box-sizing: border-box;
-} 
-body{
-  margin:0;
-
 }
-h1{
+body {
+  margin: 0;
+}
+h1 {
   /* font-size: 60px; */
   font-size: 3rem;
-  margin:0 10px;
+  margin: 0 10px;
 }
-h2{
-   font-size: 2.2rem;
-   margin:0 10px;
-   margin-top: 20px;
+h2 {
+  font-size: 2.2rem;
+  margin: 0 10px;
+  margin-top: 20px;
 }
-section{
+section {
   font-family: Raleway, sans-serif;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background:rgb(	241, 250, 238)
-
+  background: rgb(241, 250, 238);
+  padding-top: 55px;
 }
-section h1{
-  font-family:Raleway;
-  color: #1D3557;
+section h1 {
+  font-family: Raleway;
+  color: #1d3557;
   font-size: 4rem;
   font-weight: bolder;
-  margin:0 10px;
+  margin: 0 10px;
   border-bottom: 3px solid;
 }
 
 /*presentation*/
-.presentation-container{
+.presentation-container {
   height: 100vh;
 
   background: url(./img/background.svg);
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   font-family: Raleway, sans-serif;
@@ -49,64 +48,65 @@ section h1{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color:rgb(	241, 250, 238);
+  color: rgb(241, 250, 238);
   text-align: center;
-
 }
-.presentation-container span{
+.presentation-container span {
   color: rgb(230, 57, 70);
   font-size: 1.1em;
   font-weight: bolder;
 }
-.button-presentation{
-  cursor:pointer;
-  margin:10px 0px;
+.button-presentation {
+  cursor: pointer;
+  margin: 10px 0px;
   padding: 0.5rem 1.8rem;
-  background: rgba(	230, 57, 70,0.9);
+  background: rgba(230, 57, 70, 0.9);
   border-radius: 5px;
   height: 2.5rem;
   font-size: 1.2rem;
   outline: none;
-  border:none;
-  box-shadow: 0 0.3rem rgba(121,121,121,0.65);
+  border: none;
+  box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
 }
-.button-presentation:hover{
-  filter:brightness(110%);
+.button-presentation:hover {
+  filter: brightness(110%);
 }
-.button-presentation:active{
-  transform: translate(0,0.2rem);
-  box-shadow: 0 0.1rem rgba(121,121,121,0.65);
+.button-presentation:active {
+  transform: translate(0, 0.2rem);
+  box-shadow: 0 0.1rem rgba(121, 121, 121, 0.65);
 }
 /*Nav bar customizing*/
-.navbar-custom{
+.navbar-custom {
   background: rgb(230, 57, 70);
 }
 .navbar-custom .navbar-brand,
-.navbar-custom .navbar-text{
-  color:rgb(	241, 250, 238);
+.navbar-custom .navbar-text {
+  color: rgb(241, 250, 238);
 }
-.navbar-custom .navbar-nav .nav-link{
-  color:rgb(	241, 250, 238);
+.navbar-custom .navbar-nav .nav-link {
+  color: rgb(241, 250, 238);
 }
 .navbar-custom .nav-item.active .nav-link,
 .navbar-custom .nav-item:hover .nav-link {
-    color: #1D3557;
+  color: #1d3557;
 }
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(241, 250, 238' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
-
 .custom-toggler.navbar-toggler {
-  border-color: rgb(	241, 250, 238);
-} 
-.nav-link{
+  border-color: rgb(241, 250, 238);
+}
+.nav-link {
   font-size: 1.2rem;
   font-family: Raleway, sans-serif;
   margin: 0px 15px;
 }
 
 /*about container*/
-.about-container{
+.about-me{
+  background:rgb(241, 250, 238);
+}
+.about-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -116,17 +116,14 @@ section h1{
   border-radius: 10px;
   font-family: Raleway, sans-serif;
   box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
-  background-color: #A8DADC;
-
+  background-color: #a8dadc;
 }
-.about-container img{
+.about-container img {
   width: 200px;
   height: auto;
   border-radius: 10px;
-  
- 
 }
-.about-me-info{
+.about-me-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -135,50 +132,124 @@ section h1{
   font-size: 1.4em;
   font-weight: 400;
 }
-.about-me-info h1{
+.about-me-info h1 {
   font-size: 2em;
-  color:#457B9D;
+  color: #457b9d;
   border-bottom: 0px;
 }
 /*images in about*/
-.about-images-container{
+.about-images-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.image-container{
-  background: #A8DADC;
+.image-container {
+  background: #a8dadc;
   margin: 10px 20px;
   border-radius: 7px;
   text-align: center;
   box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
 }
-.image-container img{
-  width: 300px;
-  height: 300px;
-
+.image-container img {
+  width: 250px;
+  height: 250px;
+  margin:10px 10px;
 }
-.image-container h2{
-  color:#457B9D;
+.image-container h2 {
+  color: #457b9d;
   text-align: center;
   font-weight: bold;
 }
 
 
+/*Services container*/
+.services{
+  background: rgba(	69, 123, 157,.15);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.box{
+  margin: 120px 0;
+  position:relative;
+  width: 150px;
+  height: 150px;
+  transform-style:preserve-3d ;
+  animation: animate 20s linear infinite;
+}
+@keyframes animate {
+  0%{
+    transform: perspective(1000px) rotateY(0deg);
+  }
+  100%{
+    transform: perspective(1000px) rotateY(360deg);
+  }
+}
+.box span{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-origin:center;
+  transform-style:preserve-3d ;
+  transform: rotateY(calc(var(--i)*45deg)) translateZ(400px);
+  -webkit-box-reflect: below 0px linear-gradient(transparent,transparent,#0004);
+  background:rgb(241, 250, 238);
+  border-radius: 7px;
+}
+.box span img{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.services-images-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+
 /*media query*/
-@media screen and (max-width:750px) {
-  .nav-link{
+@media screen and (max-width: 750px) {
+  .nav-link {
     text-align: center;
     font-size: 2.8rem;
     margin: 20px 0px;
   }
-  .about-container{
+  .about-container {
     flex-wrap: wrap;
   }
-  .about-container{
+  .about-container {
     width: 90%;
+  }
+  .box span img{
+    position: absolute;
+    
+    top:0;
+    left: 0;
+    width: 100px;
+    height: auto;
+    object-fit: cover;
+  }
+  .box span{
+    transform: rotateY(calc(var(--i)*45deg)) translateZ(150px);
+  }
+  .box{
+    position:relative;
+    margin: 60px 0;
+    width: 100px;
+    height: 100px;
+    transform-style:preserve-3d ;
+    animation: animate 20s linear infinite;
   }
 
 }
