--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ section h1 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .image-container {
@@ -231,6 +232,17 @@ section h1 {
   .about-container {
     width: 90%;
   }
+  .box{
+    position:relative;
+    margin: 60px 0;
+    width: 100px;
+    height: 100px;
+    transform-style:preserve-3d ;
+    animation: animate 20s linear infinite;
+  }
+  .box span{
+    transform: rotateY(calc(var(--i)*45deg)) translateZ(150px);
+  }
   .box span img{
     position: absolute;
     
@@ -240,16 +252,7 @@ section h1 {
     height: auto;
     object-fit: cover;
   }
-  .box span{
-    transform: rotateY(calc(var(--i)*45deg)) translateZ(150px);
-  }
-  .box{
-    position:relative;
-    margin: 60px 0;
-    width: 100px;
-    height: 100px;
-    transform-style:preserve-3d ;
-    animation: animate 20s linear infinite;
-  }
+  
+
 
 }
