refactor styles css

--- a/style.css
+++ b/style.css
@@ -5,36 +5,8 @@ html {
 }
 body {
   margin: 0;
+  padding: 0;
 }
-h1 {
-  /* font-size: 60px; */
-  font-size: 3rem;
-  margin: 0 10px;
-}
-h2 {
-  font-size: 2.2rem;
-  margin: 0 10px;
-  margin-top: 20px;
-}
-section {
-  font-family: Raleway, sans-serif;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: rgb(241, 250, 238);
-  padding-top: 55px;
-}
-section h1 {
-  font-family: Raleway;
-  color: #1d3557;
-  font-size: 4rem;
-  font-weight: bolder;
-  margin: 0 10px;
-  border-bottom: 3px solid;
-}
-
 /*presentation*/
 .presentation-container {
   height: 100vh;
@@ -50,6 +22,15 @@ section h1 {
   align-items: center;
   color: rgb(241, 250, 238);
   text-align: center;
+}
+.presentation-container h1{
+  font-size: 3rem;
+  margin: 0 10px;
+}
+.presentation-container h2{
+  font-size: 2.2rem;
+  margin: 0 10px;
+  margin-top: 20px;
 }
 .presentation-container span {
   color: rgb(230, 57, 70);
@@ -102,9 +83,25 @@ section h1 {
   margin: 0px 15px;
 }
 
+
 /*about container*/
-.about-me{
-  background:rgb(241, 250, 238);
+.about-me-section{
+  font-family: Raleway, sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgb(241, 250, 238);
+  padding-top: 60px;
+}
+.about-me-section h1{
+  font-family: Raleway;
+  color: #1d3557;
+  font-size: 4rem;
+  font-weight: bolder;
+  margin: 0 10px;
+  border-bottom: 3px solid;
 }
 .about-container {
   display: flex;
@@ -165,13 +162,27 @@ section h1 {
 }
 
 
+
+
 /*Services container*/
-.services{
+.services-section{
+  font-family: Raleway, sans-serif;
+  padding-top: 60px;
+  min-height: 100vh;
   background: rgba(	69, 123, 157,.15);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
+}
+.services-section h1{
+  font-family: Raleway;
+  color: #1d3557;
+  font-size: 4rem;
+  font-weight: bolder;
+  margin: 0 10px;
+  border-bottom: 3px solid;
 }
 .box{
   margin: 120px 0;
@@ -228,8 +239,6 @@ section h1 {
   }
   .about-container {
     flex-wrap: wrap;
-  }
-  .about-container {
     width: 90%;
   }
   .box{
