--- a/style.css
+++ b/style.css
@@ -229,6 +229,108 @@ body {
   margin-bottom: 30px;
 }
 
+/*Projects*/
+ .project-section{
+  font-family: Raleway, sans-serif;
+  padding-top: 60px;
+  min-height: 100vh;
+  width: 100%;
+  background: rgb(241, 250, 238);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} 
+.project-section h1{
+  font-family: Raleway;
+  color: #1d3557;
+  font-size: 4rem;
+  font-weight: bolder;
+  margin: 10px 10px;
+  border-bottom: 3px solid;
+}
+.projects-container{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+.project{
+  width: 100%;
+  background:  #a8dadc;
+  margin: 20px 30px;
+  border-radius: 7px;
+  box-shadow: 0 10px 10px rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 50px;
+}
+.project-img{
+  width: 350px;
+  min-width: 350px;
+  height: auto;
+  position: relative;
+}
+.project-img img{
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+  object-fit: cover;
+}
+
+.project-info{
+  text-align: center;
+  font-size: 1.4em;
+  font-weight: 400;
+}
+
+.project-tec-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  
+  
+}
+.project-tec-container img{
+  width: 80px;
+  height: auto;
+  margin: 0 10px;
+  background: rgba(	69, 123, 157,.15);
+  border-radius: 7px;
+}
+.project-info{
+  font-size: 2rem;
+  font-size: 1.4em;
+  font-weight: 400;
+}
+.project-info h1 {
+  font-size: 2em;
+  color: #457b9d;
+  border-bottom: 0px;
+  font-weight: bolder;
+}
+/* .projects-container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
+/* .project{
+  background: tomato;
+  border-style: solid;
+  border-color: black;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
 
 /*media query*/
 @media screen and (max-width: 750px) {
@@ -261,7 +363,17 @@ body {
     height: auto;
     object-fit: cover;
   }
-  
+  .project{
+    flex-direction: column;
+  }
 
-
+  .projects-container{
+    width: 80vw;
+  }
+  .project-img{
+    width: 300px;
+    min-width: 300px;
+    height: auto;
+    position: relative;
+  }
 }
