--- a/style.css
+++ b/style.css
@@ -273,13 +273,14 @@ body {
   width: 350px;
   min-width: 350px;
   height: auto;
-  position: relative;
+  padding: 10px 10px;
 }
 .project-img img{
   width: 100%;
   height: 100%;
   border-radius: 7px;
   object-fit: cover;
+  box-shadow: 0 15px 15px rgba(0,0,0,.3);
 }
 
 .project-info{
@@ -301,12 +302,16 @@ body {
   height: auto;
   margin: 0 10px;
   background: rgba(	69, 123, 157,.15);
-  border-radius: 7px;
+  border-radius:7px ;
 }
 .project-info{
   font-size: 2rem;
   font-size: 1.4em;
   font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .project-info h1 {
   font-size: 2em;
@@ -368,11 +373,11 @@ body {
   }
 
   .projects-container{
-    width: 80vw;
+    width: 90vw;
   }
   .project-img{
-    width: 300px;
-    min-width: 300px;
+    width: 320px;
+    min-width: 320px;
     height: auto;
     position: relative;
   }
