--- a/style.css
+++ b/style.css
@@ -319,24 +319,39 @@ body {
   border-bottom: 0px;
   font-weight: bolder;
 }
-/* .projects-container{
-  width: 100%;
+
+/*contact section*/
+.contact-section{
+  font-family: Raleway, sans-serif;
+  padding-top: 60px;
+  background: rgba(	69, 123, 157,.15);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-} */
-/* .project{
-  background: tomato;
-  border-style: solid;
-  border-color: black;
   width: 100%;
+}
+.contact-section h1{
+  font-family: Raleway;
+  color: #1d3557;
+  font-size: 4rem;
+  font-weight: bolder;
+  margin: 10px 10px;
+  border-bottom: 3px solid;
+  text-align: center;
+}
+.social-icons{
+  width: 100%;
+  height: 30vh;
   display: flex;
   justify-content: center;
   align-items: center;
-} */
-
-
+}
+.social-icons img{
+  width: 4rem;
+  height: auto;
+  margin: 0 10px;
+}
 /*media query*/
 @media screen and (max-width: 750px) {
   .nav-link {
