--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ body {
 }
 /*presentation*/
 .presentation-container {
-  height: 100vh;
-
+  min-height: 100vh;
   background: url(./img/background.svg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -21,28 +20,42 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: rgb(241, 250, 238);
+  color: #457B9D;
   text-align: center;
+
+}
+.presentation-text-container{
+  background:rgba(241, 250, 238,.5);
+  border-radius: 7px;
+  max-width: 80%;
+  padding: 10px 10px;
 }
 .presentation-container h1{
   font-size: 3rem;
   margin: 0 10px;
+  font-weight:600;
+  overflow-wrap:break-word;
 }
 .presentation-container h2{
   font-size: 2.2rem;
   margin: 0 10px;
-  margin-top: 20px;
+  margin-top: 10px;
+  font-weight:600;
+  margin-bottom: 10px;
+  overflow-wrap:break-word;
 }
 .presentation-container span {
   color: rgb(230, 57, 70);
   font-size: 1.1em;
   font-weight: bolder;
+  overflow-wrap:break-word;
 }
 .button-presentation {
   cursor: pointer;
   margin: 10px 0px;
   padding: 0.5rem 1.8rem;
   background: rgba(230, 57, 70, 0.9);
+  color: whitesmoke;
   border-radius: 5px;
   height: 2.5rem;
   font-size: 1.2rem;
@@ -359,6 +372,22 @@ body {
   html {
     scroll-behavior:auto;
   }
+  /*presentation*/
+  .presentation-container h1{
+    font-size: 2.4rem;
+    
+  }
+  .presentation-container h2{
+    font-size: 2rem;
+  }
+  .presentation-text-container{
+
+    border-radius: 7px;
+    max-width: 65%;
+    padding: 5px 5px;
+    text-align: center;
+  }
+
   .nav-link {
     text-align: center;
     font-size: 2.8rem;
