--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
   align-items: center;
   color: #457B9D;
   text-align: center;
-
 }
 .presentation-text-container{
   background:rgba(241, 250, 238,.5);
@@ -108,11 +107,12 @@ body {
   align-items: center;
   background: rgb(241, 250, 238);
   padding-top: 60px;
+  
 }
 .about-me-section h1{
   font-family: Raleway;
   color: #1d3557;
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: bolder;
   margin: 0 10px;
   border-bottom: 3px solid;
@@ -121,8 +121,9 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 60%;
-  padding: 10px 20px;
+  align-items: center;
+  width: 65vw;
+  padding: 15px 20px;
   margin: 25px;
   border-radius: 10px;
   font-family: Raleway, sans-serif;
@@ -130,8 +131,8 @@ body {
   background-color: #a8dadc;
 }
 .about-container img {
-  width: 200px;
-  height: auto;
+  width: auto;
+  height: 270px;
   border-radius: 10px;
 }
 .about-me-info {
@@ -142,12 +143,20 @@ body {
   text-align: center;
   font-size: 1.4em;
   font-weight: 400;
+  margin: 20px 10px;
+
 }
 .about-me-info h1 {
-  font-size: 2em;
+  font-size:  2rem;
   color: #457b9d;
   border-bottom: 0px;
 }
+.about-me-info p{
+  margin: 10px 22px;
+  text-align: left;
+}
+
+
 /*images in about*/
 .about-images-container {
   display: flex;
@@ -160,6 +169,7 @@ body {
 .image-container {
   background: #a8dadc;
   margin: 10px 20px;
+  padding: 20px 10px;
   border-radius: 7px;
   text-align: center;
   box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
@@ -170,6 +180,7 @@ body {
   margin:10px 10px;
 }
 .image-container h2 {
+  font-size: 1.4rem;
   color: #457b9d;
   text-align: center;
   font-weight: bold;
@@ -393,10 +404,25 @@ body {
     font-size: 2.8rem;
     margin: 20px 0px;
   }
+  /*about section*/
   .about-container {
     flex-wrap: wrap;
-    width: 90%;
+    width: 80%;
   }
+  .about-me-section{
+    overflow-wrap:break-word;
+  }
+  .about-images-container {
+    flex-direction: column;
+  }
+  .about-container img {
+    width: auto;
+    max-width: 80vw;
+    height: 300px;
+    border-radius: 10px;
+  }
+
+
   .box{
     position:relative;
     margin: 60px 0;
